--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 #REACT_APP_API_BASE_URL=https://localhost:7204
-REACT_APP_API_BASE_URL=https://www.yamiconapi.somee.com/
+REACT_APP_API_BASE_URL=https://www.yamiconapi.somee.com
